--- a/apps/pwa/src/styles/components/_cashu-wallet.module.scss
+++ b/apps/pwa/src/styles/components/_cashu-wallet.module.scss
@@ -60,6 +60,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 2rem;
+    // scrollbar-width: none;
     
     &-button {
       flex: 1;
@@ -241,6 +242,7 @@
     display: flex;
     border-bottom: 1px solid var(--border);
     margin-bottom: 1.5rem;
+    overflow-x: auto;
     
     &-item {
       padding: 0.75rem 1rem;
